RESOLVED FIXED211153
REGRESSION (r260808): Backdrops on music.apple.com are offset
https://bugs.webkit.org/show_bug.cgi?id=211153
Summary REGRESSION (r260808): Backdrops on music.apple.com are offset
Simon Fraser (smfr)
Reported 2020-04-28 15:53:25 PDT
REGRESSION (r260808): Backdrops on music.apple.com are offset
Attachments
Patch (5.44 KB, patch)
2020-04-28 15:54 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-04-28 15:54:10 PDT
Simon Fraser (smfr)
Comment 2 2020-04-28 15:54:12 PDT
EWS
Comment 3 2020-04-28 17:12:34 PDT
Committed r260858: <https://trac.webkit.org/changeset/260858> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397894 [details].
Note You need to log in before you can comment on or make changes to this bug.