REGRESSION (r260808): Backdrops on music.apple.com are offset https://bugs.webkit.org/show_bug.cgi?id=211153 Source/WebCore:

<rdar://problem/62543158>

Reviewed by Zalan Bujtas.

The border-radius code path failed to offset the rounded rect by contentOffsetInCompositingLayer().

Test: compositing/filters/backdrop-filter-rect-border-radius.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateBackdropFiltersGeometry):

LayoutTests:

Reviewed by Zalan Bujtas.

* compositing/filters/backdrop-filter-rect-border-radius-expected.html: Added.
* compositing/filters/backdrop-filter-rect-border-radius.html: Added.


Canonical link: https://commits.webkit.org/224051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260858 268f45cc-cd09-0410-ab3c-d52691b4dbfc